[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "sprocket"
version = "0.1"
authors = [
  {name="Sylvie Liberman", email="sylvie@together.ai"},
  {name="Yorick van Pelt", email="yvanpelt@together.ai"},
]
description = "Together BYOC SDK"
readme = "README.md"
requires-python = ">=3.9"
# todo: constrain
dependencies = [
    "httpx",
    "orjson>=3.11.2",
    "starlette",
    "uvicorn",
]

[project.urls]
Homepage = "https://github.com/togethercomputer/sprocket"
Issues = "https://github.com/togethercomputer/sprocket/issues"

[dependency-groups]
dev = [
    "ruff>=0.12.5",
]

[tool.setuptools]
packages = ["sprocket"]
