[build-system]
requires = ["setuptools >= 80", "setuptools-scm >= 8.1"]
build-backend = "setuptools.build_meta"

[project]
name = "sprocket"
dynamic = ["version"]
authors = [
  {name="Sylvie Liberman", email="sylvie@together.ai"},
  {name="Yorick van Pelt", email="yvanpelt@together.ai"},
]
description = "Together Dedicated Container Inference SDK"
readme = "README.md"
requires-python = ">=3.10"
# todo: constrain
dependencies = [
    "httpx",
    "orjson>=3.11.2",
    "starlette",
    "uvicorn",
]

[project.scripts]
jig = "jig:jig"

[project.urls]
Homepage = "https://github.com/togethercomputer/sprocket"
Issues = "https://github.com/togethercomputer/sprocket/issues"

[dependency-groups]
dev = [
    "ruff>=0.12.5",
]

[tool.setuptools]
packages = ["sprocket"]
py-modules = ["jig"]

[tool.setuptools_scm]
