[project]
name = "sprocket-queue-test"
version = "0.1.0"
dependencies = ["httpx", "orjson", "starlette", "uvicorn"]

[tool.jig.image]
python_version = "3.11"
cmd = "python3 example_worker.py"
copy = ["example_worker.py"]

[tool.jig.deploy]
description = ""
gpu_type = "none"
gpu_count = 0
cpu = 4
memory = "32" # in GB
storage = "100" # in GB
port = 8000
min_replicas = 1
max_replicas = 10

[tool.jig.deploy.environment_variables]
FOO="bar"
