[project]
name = "kitchen-sink"
version = "0.1.0"
dependencies = ["sprocket"]

[[tool.uv.index]]
name = "together-pypi"
url = "https://pypi.together.ai/"

[tool.uv.sources]
sprocket = { index = "together-pypi" }

[tool.jig.image]
python_version = "3.11"
cmd = "python3 kitchen_sink.py --queue"
copy = ["kitchen_sink.py"]

[tool.jig.deploy]
gpu_type = "none"
gpu_count = 0
cpu = 1
memory = 2
storage = 10
port = 8000
min_replicas = 1
max_replicas = 1

[[tool.jig.volume_mounts]]
name = "kitchen-sink-pantry"
mount_path = "/pantry"

[tool.jig.autoscaling]
profile = "QueueBacklogPerWorker"
targetValue = "1"
