[project]
name = "qwen25-vl"
version = "1.0.0" 

[tool.jig.deploy]
# deploy an existing image instead of building
image = "vllm/vllm-openai:v0.17.1"

description = "Test Qwen2.5 video input"

gpu_type = "h100-80gb"
gpu_count = 2
cpu = 4
memory = 64
port = 8000
min_replicas = 1
max_replicas = 1
command = [
    "vllm",
    "serve",
    "Qwen/Qwen2.5-VL-32B-Instruct",
    "--port",
    "8000",
    "--host",
    "0.0.0.0",
    "--dtype",
    "bfloat16",
    "--limit-mm-per-prompt.image",
    "5",
    "--limit-mm-per-prompt.video",
    "5",
    "--tensor-parallel-size",
    "2"
]

[tool.jig.deploy.environment_variables]
VLLM_LOGGING_LEVEL="debug"
NCCL_DEBUG="debug"
